--- a/stable/spinnaker/values.yaml
+++ b/stable/spinnaker/values.yaml
@@ -7,11 +7,11 @@
 accounts:
 - name: dockerhub
   address: https://index.docker.io
+  username: *****
+  password: *****
   repositories:
-    - library/alpine
-    - library/ubuntu
-    - library/centos
-    - library/nginx
+    - library/mongo
+    - *****/rsvpapp
 # - name: gcr
 #   address: https://gcr.io
 #   username: _json_key
@@ -25,12 +25,12 @@ accounts:
 kubeConfig:
   # Use this when you want to register arbitrary clusters with Spinnaker
   # Upload your ~/kube/.config to a secret
-  enabled: false
+  enabled: true
   secretName: my-kubeconfig
   secretKey: config
   # List of contexts from the kubeconfig to make available to Spinnaker
-  contexts: []
-
+  contexts:
+  - minikube
 mail:
   enabled: false
   host: smtp.example.org
@@ -62,9 +62,9 @@ deck:
   protocol: http
   ingress:
     enabled: false
-    # annotations:
+     # annotations:
       # ingress.kubernetes.io/ssl-redirect: 'true'
-      # kubernetes.io/ingress.class: nginx
+      #  kubernetes.io/ingress.class: nginx
       # kubernetes.io/tls-acme: "true"
     # tls:
     #  - secretName: -tls
@@ -100,7 +100,7 @@ nodeSelector: {}
 redis:
   redisPassword: password
   nodeSelector: {}
-
+  imageTag: 4.0.11-debian-9 
 # Minio access/secret keys for the in-cluster S3 usage
 # Minio is not exposed publically
 minio:
